fixed the links to the footnote refs

--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@ footer { font-size: small; font-family: sans-serif; border-top: 1px solid grey; 
 
         <li id="fn:2">Alice Eldridge and Chris Kiefer. 2018. “Toward a Synthetic Acoustic Ecology: Sonically Situated, Evolutionary Agent Based Models of the Acoustic Niche Hypothesis.” Artificial Life Conference Proceedings 2018 NO. 30, 296-303 <a href="#fnref:2" title="return to article"> ↩</a></li>
 
-        <li id="fn:3">Nadia Pieretti, Marco Lo Martire, Almo Farina, and Roberto Danovaro. 2017. “Marine Soundscape as an Additional Biodiversity Monitoring Tool: A Case Study from the Adriatic Sea (mediterranean Sea)”, July. <a href="https://doi.org/10.1016/j.ecolind.2017.07.011"></a> <a href="#fnref:3" title="return to article"> ↩</a></li>
+        <li id="fn:3">Nadia Pieretti, Marco Lo Martire, Almo Farina, and Roberto Danovaro. 2017. “Marine Soundscape as an Additional Biodiversity Monitoring Tool: A Case Study from the Adriatic Sea (mediterranean Sea)”, July. <a href="https://doi.org/10.1016/j.ecolind.2017.07.011">doi: doi.org/10.1016/j.ecolind.2017.07.011</a> <a href="#fnref:3" title="return to article"> ↩</a></li>
 
-        <li id="fn:4">Veits, M., Khait, I., Obolski, U., Zinger, E., Boonman, A., Goldshtein, A., Saban, K., Seltzer, R., Ben‐Dor, U., Estlein, P., Kabat, A., Peretz, D., Ratzersdorfer, I., Krylov, S., Chamovitz, D., Sapir, Y., Yovel, Y. and Hadany, L. (2019), Flowers respond to pollinator sound within minutes by increasing nectar sugar concentration. Ecol Lett, 22: 1483-1492. <a href="https://doi.org/10.1111/ele.13331"></a> <a href="#fnref:4" title="return to article"> ↩</a></li>
+        <li id="fn:4">Veits, M., Khait, I., Obolski, U., Zinger, E., Boonman, A., Goldshtein, A., Saban, K., Seltzer, R., Ben‐Dor, U., Estlein, P., Kabat, A., Peretz, D., Ratzersdorfer, I., Krylov, S., Chamovitz, D., Sapir, Y., Yovel, Y. and Hadany, L. (2019), Flowers respond to pollinator sound within minutes by increasing nectar sugar concentration. Ecol Lett, 22: 1483-1492. <a href="https://doi.org/10.1111/ele.13331">doi: doi.org/10.1111/ele.13331</a> <a href="#fnref:4" title="return to article"> ↩</a></li>
 
-        <li id="fn:5">I. Khait, O. Lewin-Epstein, R. Sharon, K. Saban, R. Perelman, A. Boonman, Y. Yovel, L. Hadany. 2019. Plants emit informative airborne sounds under stress. bioRxiv 507590; doi: <a href="https://doi.org/10.1101/507590"></a> <a href="#fnref:5" title="return to article"> ↩</a></li>
+        <li id="fn:5">I. Khait, O. Lewin-Epstein, R. Sharon, K. Saban, R. Perelman, A. Boonman, Y. Yovel, L. Hadany. 2019. Plants emit informative airborne sounds under stress. bioRxiv 507590; <a href="https://doi.org/10.1101/507590">doi: doi.org/10.1101/507590</a> <a href="#fnref:5" title="return to article"> ↩</a></li>
     </ol>
     
 </main>
