--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@ footer { font-size: small; font-family: sans-serif; border-top: 1px solid grey; 
 
 <header>
 <h1>An Ocean of Noise</h1>
+<small>An Art+Science Proposal Submitted to konS Platform for Contemporary Investigative Art</small>
 </header>
 
 <main>
     <h2 id="proposal">Proposal</h2>
-    <small><b>proposal</b> <a href="#sketches">sketches</a> <a href="#long-term-archive">long term archive</a></small>
+    <small><b>proposal</b> <a href="#supplementary-material">supplementary material</a></small>
 
     <p>Humans seek natural environment for its beauty, comfort, and at times, for its quietness. In reality, nature is hardly quiet. In fact, it is noisy, full of sounds ranging from soft murmurs to a cacophony. In this medley of sounds, insects, birds and animals, not just thousands, but thousands of kinds of thousands, manage to communicate. Imagine walking in a room full of thousands of people talking in hundreds of different languages to others who speak the same. It would be incomprehensible. But, in nature, a complex system of communication allows maximization of signal over noise in, what the bioacoustics scientist Rohini Balakrishnan calls <i>an ecology of communication.</i><sup id="fnref:1"><a href="#fn:1" rel="footnote">1</a></sup></p>
     
@@ -54,7 +55,7 @@ footer { font-size: small; font-family: sans-serif; border-top: 1px solid grey; 
     <p>The processes of both art an science involve conversion of one form of signal into another. Whether an artist is using colors or sounds or sensations to express ideas and emotions or an scientist is converting sensed signals – light, movement, temperature, radiation, etc. – into data, charts, visualization, conceptually the process is an interlinked steps of algorithms converting ouput from the previous step into input for the subsequent step. We intend to use sound as the input and convert it into other forms of energy (all signals are energy) as part of our art installation.</p>
 
     <figure>
-        <img src="images/art-installation-concept.png" alt="art installation concept" title="art installation concept" width="100%">
+        <img src="assets/art-installation-concept.png" alt="art installation concept" title="art installation concept" width="100%">
         <figcaption>concept for art installation</figcaption>
     </figure>
 
@@ -62,16 +63,111 @@ footer { font-size: small; font-family: sans-serif; border-top: 1px solid grey; 
 
     <p>Kika has been studying marine noise pollution and its effect on marine life, and using her observations and findings to construct art installations that put the viewer in the situation that an animal in water experiences. This requires recording marine sounds, both natural and human made, in a diverse environments and locales, processing them through software and using them to control light and movement, all working together to create an immersive experience. Meanwhile, Puneet has been working with open hardware and sensors, collaborating with artists on projects that involve sensing of environmental parameters, visualization of data, 3D printing and other related technologies. Working together, we intend to take our experiments into a higher level of complexity and investigation, looking for understanding of not just how humans impact the environment but also seeking inspiration in how the non-human world communicates. <i>If we listen, perhaps we can hear what it is trying to tell us.</i></p>
 
-    <h2 id="sketches">Sketches</h2>
-    <small><a href="#proposal">proposal</a> <b>sketches</b> <a href="#long-term-archive">long term archive</a></small>
+    <h2 id="supplementary-material">Supplementary Material</h2>
+    <small><a href="#proposal">proposal</a> <b>supplementary material</b></small>
 
+    <h3>Websites of Related Works</h3>
+
+    <ol>
+        <li>Francisca Rocha Gonçalves http://franciscagoncalves.com
+            <ol>
+                <li>sound http://franciscagoncalves.com/portfolio-item/sound/
+                    <p>Testing sensitivity, frequency range, background noise, bandwiths, noise levels of different
+                        hydrophones at INESCTEC.</p>
+                </li>
+                <li>Luciferina http://franciscagoncalves.com/portfolio-item/luciferina/
+                    <p>A laser and sound installation exploring noise pollution’s effect on bioluminescence. The
+                        audiovisual installation creates an immersive environment through a dialogue between sound and light exposed by vibrations, where the use of low-frequency sounds disturbs light visualisation.</p>
+                </li>
+                <li>Sinø http://franciscagoncalves.com/portfolio-item/sino/
+                    <p>SINØ is an audiovisual live performance that explores the intersections between nature, art and technology. From micro to macro dimensions we work with real time images in a dialogue with laser projection and propose a narrative from the real to the abstract.</p>
+                </li>
+                <li>Kobayashi2001 http://franciscagoncalves.com/portfolio-item/kobayashi2001/
+                    <p>A live audiovisual performance made with real time live coding sound and audio reactive visuals. It
+                        explores a non-linear narrative using images and sounds captured in the physical world. These digital recordings our daily experiences are used as raw material for the performance.</p>
+                </li>
+            </ol>
+        </li>
+
+        <li>Puneet Kishor CV https://punkish.org/cv
+            <ol>
+                <li>Hong Kong Bay Water Quality https://punkish.org/Hong-Kong-Bay-Water-Quality-Data
+                <p>A data monitoring display developed for the gravitational currents and the life magic exhibition at
+                    the Empty Gallery Hong Kong by Susanne Winterling, a part of an artistic research project exploring planetary sensing navigations. Yim Tin Tsai Fish Culture Zone water quality data from the HK AFCD.</p>
+                </li>
+                <li>Water Quality Monitoring https://punkish.org/Water-Quality-Monitoring
+                    <p>This water monitoring device for the gravitational currents and the life magic exhibition at the
+                        Empty Gallery Hong Kong exhibition of works by Susanne Winterling. The device is based on a design by Shan He of Public Lab in cooperation with DF Robot.</p>
+                </li>
+                <li>Mycoprinter https://punkish.org/Mycoprinter
+                    <p>An open source 3D bioprinter that prints mycelium substrate ready for inoculation with fungi
+                        spores. It combines additive manufacturing with plant biological tissue to mimic living organisms sculpted into artistic shapes bringing engineering, biology, and art together under citizen science.</p>
+                </li>
+                <li>Spectrophotometer https://punkish.org/Spectrophotometer
+                    <p>The quantitative measurement of the reflection or transmission properties of a material as a
+                        function of wavelength. A white light source is split into its components by a monochromator such as a diffraction grating or a prism and directed to an exit slit, through a cuvette holding the sample and on a photo-receptor to calculate the absorbance via the Lambert-Beer equation <code>A = -Log10(I1/I0)</code>.</p>
+                </li>
+            </ol>
+        </li>
+    </ol>
+
+    <h3>Project Websites</h3>
+
+    <ol>
+        <li>Project website https://kons.punkish.org</li>
+        <li>Github repository for the project https://github.com/punkish/kons</li>
+        <li>Long term archive for media and published material https://zenodo.org</li>
+    </ol>
+
+    <h3>Sketches, Hardware and Other Material</h3>
+    
     <figure>
-        <img src="images/sketches.png" alt="sketches" title="sketches" width="100%">
+        <img src="assets/sketches.png" alt="sketches" title="sketches" width="100%">
         <figcaption>sketches</figcaption>
     </figure>
 
-    <h2 id="long-term-archive">Long Term Archive</h2>
-    <small><a href="#proposal">proposal</a> <a href="#sketches">sketches</a> <b>long term archive</b></small>
+    <figure>
+        <img src="assets/recording-on-doura.jpg" alt="recording on the Doura" title="recording on the Doura" width="100%">
+        <figcaption>recording on the Doura</figcaption>
+    </figure>
+
+    <figure>
+        <audio
+            controls
+            src="/assets/palmeiras.mp3">
+            Your browser does not support the <code>audio</code> element.
+        </audio>
+        <figcaption>Palmeiras, Portugal</figcaption>
+    </figure>
+
+    <figure>
+        <audio
+            controls
+            src="/assets/leca.mp3">
+            Your browser does not support the <code>audio</code> element.
+        </audio>
+        <figcaption>Leça, Matosinhos, Portugal</figcaption>
+    </figure>
+
+    <figure>
+        <audio
+            controls
+            src="/assets/colva.mp3">
+            Your browser does not support the <code>audio</code> element.
+        </audio>
+        <figcaption>Colva, Goa, India</figcaption>
+    </figure>
+
+    <figure>
+        <audio
+            controls
+            src="/assets/lucknow.mp3">
+            Your browser does not support the <code>audio</code> element.
+        </audio>
+        <figcaption>Lucknow, India</figcaption>
+    </figure>
+
+    <h3>Long Term Archive</h3>
 
     <p>No one is ever alone. We all stand on the shoulders of others, and so, we too shall make our shoulders available to others. All our work in this project will be made available at this dedicated website and on <a href="https://github.com/punkish/kons">Github</a> under the <a href="https://creativecommons.org/publicdomain/zero/1.0/legalcode" target="_blank">CC0 Public Domain Dedication</a>. All media and stand-alone publishable material will be archived on <a href="https://zenodo.org" target="_blank">Zenodo</a> at CERN in Geneva under the tags <code>bioacoustics</code> and <code>ecoacousitics</code>. This way, everything will be available for generations to come, anywhere, at anytime, for any purpose.</p>
 
