cleaned up the urls

--- a/index.html
+++ b/index.html
@@ -69,41 +69,41 @@ footer { font-size: small; font-family: sans-serif; border-top: 1px solid grey; 
     <h3>Websites of Related Works</h3>
 
     <ol>
-        <li>Francisca Rocha Gonçalves http://franciscagoncalves.com
+        <li><a href="http://franciscagoncalves.com" target="_blank">Francisca Rocha Gonçalves</a>
             <ol>
-                <li>sound http://franciscagoncalves.com/portfolio-item/sound/
+                <li><a href="http://franciscagoncalves.com/portfolio-item/sound/" target="_blank">sound</a> 
                     <p>Testing sensitivity, frequency range, background noise, bandwiths, noise levels of different
                         hydrophones at INESCTEC.</p>
                 </li>
-                <li>Luciferina http://franciscagoncalves.com/portfolio-item/luciferina/
+                <li><a href="http://franciscagoncalves.com/portfolio-item/luciferina/" target="_blank">Luciferina</a> 
                     <p>A laser and sound installation exploring noise pollution’s effect on bioluminescence. The
                         audiovisual installation creates an immersive environment through a dialogue between sound and light exposed by vibrations, where the use of low-frequency sounds disturbs light visualisation.</p>
                 </li>
-                <li>Sinø http://franciscagoncalves.com/portfolio-item/sino/
+                <li><a href="http://franciscagoncalves.com/portfolio-item/sino/" target="_blank">Sinø</a> 
                     <p>SINØ is an audiovisual live performance that explores the intersections between nature, art and technology. From micro to macro dimensions we work with real time images in a dialogue with laser projection and propose a narrative from the real to the abstract.</p>
                 </li>
-                <li>Kobayashi2001 http://franciscagoncalves.com/portfolio-item/kobayashi2001/
+                <li><a href="http://franciscagoncalves.com/portfolio-item/kobayashi2001/" target="_blank">Kobayashi2001</a> 
                     <p>A live audiovisual performance made with real time live coding sound and audio reactive visuals. It
                         explores a non-linear narrative using images and sounds captured in the physical world. These digital recordings our daily experiences are used as raw material for the performance.</p>
                 </li>
             </ol>
         </li>
 
-        <li>Puneet Kishor CV https://punkish.org/cv
+        <li><a href="https://punkish.org/cv" target="_blank"></a>Puneet Kishor CV
             <ol>
-                <li>Hong Kong Bay Water Quality https://punkish.org/Hong-Kong-Bay-Water-Quality-Data
+                <li><a href="https://punkish.org/Hong-Kong-Bay-Water-Quality-Data" target="_blank">Hong Kong Bay Water Quality</a>
                 <p>A data monitoring display developed for the gravitational currents and the life magic exhibition at
                     the Empty Gallery Hong Kong by Susanne Winterling, a part of an artistic research project exploring planetary sensing navigations. Yim Tin Tsai Fish Culture Zone water quality data from the HK AFCD.</p>
                 </li>
-                <li>Water Quality Monitoring https://punkish.org/Water-Quality-Monitoring
+                <li><a href="https://punkish.org/Water-Quality-Monitoring" target="_blank">Water Quality Monitoring</a>
                     <p>This water monitoring device for the gravitational currents and the life magic exhibition at the
                         Empty Gallery Hong Kong exhibition of works by Susanne Winterling. The device is based on a design by Shan He of Public Lab in cooperation with DF Robot.</p>
                 </li>
-                <li>Mycoprinter https://punkish.org/Mycoprinter
+                <li><a href="https://punkish.org/Mycoprinter" target="_blank">Mycoprinter</a>
                     <p>An open source 3D bioprinter that prints mycelium substrate ready for inoculation with fungi
                         spores. It combines additive manufacturing with plant biological tissue to mimic living organisms sculpted into artistic shapes bringing engineering, biology, and art together under citizen science.</p>
                 </li>
-                <li>Spectrophotometer https://punkish.org/Spectrophotometer
+                <li><a href="https://punkish.org/Spectrophotometer" target="_blank">Spectrophotometer</a>
                     <p>The quantitative measurement of the reflection or transmission properties of a material as a
                         function of wavelength. A white light source is split into its components by a monochromator such as a diffraction grating or a prism and directed to an exit slit, through a cuvette holding the sample and on a photo-receptor to calculate the absorbance via the Lambert-Beer equation <code>A = -Log10(I1/I0)</code>.</p>
                 </li>
@@ -114,9 +114,9 @@ footer { font-size: small; font-family: sans-serif; border-top: 1px solid grey; 
     <h3>Project Websites</h3>
 
     <ol>
-        <li>Project website https://kons.punkish.org</li>
-        <li>Github repository for the project https://github.com/punkish/kons</li>
-        <li>Long term archive for media and published material https://zenodo.org</li>
+        <li><a href="https://kons.punkish.org" target="_blank">Project website</a></li>
+        <li><a href="https://github.com/punkish/kons" target="_blank"></a>Github repository</a> for the project</li>
+        <li><a href="https://zenodo.org" target="_blank"></a>Long term archive</a> for media and published material</li>
     </ol>
 
     <h3>Sketches, Hardware and Other Material</h3>
