cleaned up the urls

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ footer { font-size: small; font-family: sans-serif; border-top: 1px solid grey; 
             </ol>
         </li>
 
-        <li><a href="https://punkish.org/cv" target="_blank"></a>Puneet Kishor CV
+        <li><a href="https://punkish.org/cv" target="_blank">Puneet Kishor CV
             <ol>
                 <li><a href="https://punkish.org/Hong-Kong-Bay-Water-Quality-Data" target="_blank">Hong Kong Bay Water Quality</a>
                 <p>A data monitoring display developed for the gravitational currents and the life magic exhibition at
@@ -115,8 +115,8 @@ footer { font-size: small; font-family: sans-serif; border-top: 1px solid grey; 
 
     <ol>
         <li><a href="https://kons.punkish.org" target="_blank">Project website</a></li>
-        <li><a href="https://github.com/punkish/kons" target="_blank"></a>Github repository</a> for the project</li>
-        <li><a href="https://zenodo.org" target="_blank"></a>Long term archive</a> for media and published material</li>
+        <li><a href="https://github.com/punkish/kons" target="_blank">Github repository</a> for the project</li>
+        <li><a href="https://zenodo.org" target="_blank">Long term archive</a> for media and published material</li>
     </ol>
 
     <h3>Sketches, Hardware and Other Material</h3>
