--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ footer { font-size: small; font-family: sans-serif; border-top: 1px solid grey; 
 
         <li id="fn:6">Coincidentally, Slovenia has a unique connection with the field of bioacoustics since the <a href="https://www.slovenska-biografija.si/oseba/sbi496396/" target="_blank">Slovenian scientist Ivan Regen</a> was the first to introduce it as a scientific discipline based on his studies of insect sounds almost a hundred years ago. <a href="#fnref:6" title="return to article"> ↩</a></li>
 
-        <li id="fn:7">We use “immuatable” to imply a work of art that, once created, doesn’t change. It doesn’t imply a lack of motion but a lack of change of purpose and action. <a href="#fnref:7" title="return to article"> ↩</a></li>
+        <li id="fn:7">We use “immutable” to imply a work of art that, once created, doesn’t change. It doesn’t imply a lack of motion but a lack of change of purpose and action. <a href="#fnref:7" title="return to article"> ↩</a></li>
     </ol>
     
 </main>
